# scipy

./: .gitignore
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: integrate_build_notes.md  integrate_phase2_cython_extension_notes.md  integrate_riccati_sop_overview.md  integrate_riccaticpp_notes.md  integrate_solve_ivp_extension_plan.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
design-docs/: riccati_solve_ivp_osc_migration.md  riccati_solve_ivp_osc_migration_checklist.md  riccati_solve_ivp_osc_phase1_stub_sop.md  riccati_solve_ivp_osc_phase2_dummy_ext_sop.md  riccati_solve_ivp_osc_phase3_core_solver_sop.md  riccati_solve_ivp_osc_phase4_dense_sop.md  riccati_solve_ivp_osc_phase5_docs_sop.md
doc/source/release/: 1.18.0-notes.rst
orchestration/247bd028-762a-41af-9067-f183f41488be/: todo.json
orchestration/4b242d0a-037c-4899-8481-fef199268bbc/: todo.json
orchestration/4f402bb7-e13e-43e4-b4e2-01fe2ef80bb8/: todo.json
orchestration/7c1e3e51-f4df-46bf-8802-e655313d4eb7/: todo.json
orchestration/b8f9a826-e03a-4f31-bf35-40785859e2a5/: todo.json
scipy/integrate/: __init__.py
scipy/integrate/_ivp/: _osc.py  _riccati.pyx  _riccati_pybind.cpp  meson.build
scipy/integrate/_ivp/tests/: meson.build  test_osc.py  test_riccati_dummy.py  test_solve_ivp_osc_stub.py
scipy/integrate/include/riccati/: memory.hpp  riccati_wrapper.hpp
scipy/integrate/src/: riccati_wrapper.cpp
subprojects/: eigen.wrap  riccaticpp.wrap
subprojects/packagefiles/riccaticpp/: meson.build
